--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <div class="gate-text">
-        Mulla ke lulli katate hain
+        follow for more @movies_addaa_
     </div>
     <button class="buy-button" onclick="playMusic()">Buy</button>
 
